Mon Jan 13 13:33:34 CET 2003  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Rearranged.

	* src/init.c (main_window): Background is now set.

Thu Jan  9 01:33:17 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: fix typo.
	* autogen.sh: do not rm the configure.in symlink (gnome-autogen.sh is
	broken still).

Thu Jan  9 00:13:41 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): add intltool files.
	(Applications_in_files): added by intltool-prepare.
	(Applications_DATA): modified by intltool-prepare.
	* configure.ac (AC_PROG_INTLTOOL): added intltool support.
	* gnome-mud.desktop: replaced...
	* gnome-mud.desktop.in: ... by this.
	* .cvsignore: update ignorable files.
	

Wed Jan  8 21:52:12 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: add AM_GLIB_GNU_GETTEXT, so gnome-autogen behaves.

Wed Jan  8 21:05:24 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* autogen.sh: use gnome-autogen.sh.
	* macros/*: removed. GNOME2 uses system wide macros.

Wed Jan  8 13:10:24 CET 2003  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c (data_button_add): g_strdup on text entry
	(text_entry_send_command): gchar -> const gchar
	(keybind_button_add_clicked_cb): g_strdup and null check added
	(stop_logging_connection): gchar -> const gchar + g_strdup

	* src/map.c (save_maps): gchar -> const gchar
	(file_sel_delete_event): ditto
	(load_automap_from_file): ditto

	* src/mudlist.c (mudlist_parse_hoststring): gchar -> const gchar
	(mudlist_button_connect_cb): ditto
	(mudlist_button_import_cb): ditto

	* src/prefs.c (prefs_entry_terminal_cb): added g_strdup
	(prefs_entry_mudlistfile_cb): ditto
	(prefs_entry_divide_cb): ditto

	* src/profiles.c (profilelist_new_profile): Added const + g_strdup
	(connections_find): gchar -> const gchar
	(connections_button_info_cancel_cb): Removed
	(window_profiles): Removed button_info_cancel
	(window_profile_edit): fixed stock images
